Fixed broken link to Whyline.

--- a/declarative.html
+++ b/declarative.html
@@ -242,7 +242,7 @@
 		</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/wcy4JEmiQzI" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/fP8swbzeDuY" frameborder="0" allowfullscreen></iframe>
 			<center><em>Whyline for Alice</em></center>
 		</p>
 
