Fixed #74, minor revisions to text.

--- a/interactive.html
+++ b/interactive.html
@@ -150,11 +150,17 @@
 			Others have explored ways of moving data between different machines by giving copied data identity (<a href="#rekimoto">Rekimoto 1997</a>) or by synchronizing clipboards across devices (<a href="#miller">Miller & Myers 1999</a>).
 			Some of these features are now mainstream; for example, iOS supports a cloud-based synchronized keyboard that enables pasting content between different devices logged into the same iCloud account.
 		</p>
+		
+		<p>
+			Finally, WIMP interfaces involve some form of pointing, a necessary part of selecting menus, icons, and windows.
+			A later chapter will <a href="pointing.html">discuss pointing in detail</a>.
+		</p>
 
 		<h2>Direct manipulation</h2>
 
 		<p>
 			Another central paradigm of WIMP interfaces is <strong>direct manipulation</strong> (<a href="#hutchins">Hutchins et al. 1985</a>).
+			(Although note that direct manipulation applies to more than just WIMP interfaces).
 			The essential idea behind direct manipulation is that:
 		</p>
 		
