Fixed #75, citing universal design.

--- a/accessibility.html
+++ b/accessibility.html
@@ -63,8 +63,9 @@
 			Toolkits make it so easy to design graphical user interfaces that these are the only kind of interfaces designers make.
 			This results in most interfaces being difficult or sometimes impossible for vast populations to use, which really makes no business sense (<a href="https://doi.org/10.1145/2843590">Horton and Sloan 2015</a>).
 			We use the word <strong>accessibility</strong> to refer to the extent to which an interface can be used by people regardless of their abilities.
-			We describe user interfaces as <strong>universal</strong> if they can be used by people regardless of what combination of abilities they have. 
-			This definition is is unfortunately vague, but that is because it is aspirational: no interface can serve everyone, but with an intentional effort to be inclusive, we can usually serve many more than we would have otherwise.
+			We describe user interfaces as <strong>universal</strong> if they can be used by people regardless of what combination of abilities they have (Storey 1998).
+			Achiving universal design means achieving principles like ensuring that use is equitable, flexible, simple, that information be perceived and accessed by all, that error rates are low for everyone, and that physical effort is minimal.
+			These principles can be vague, but that is because abilities are diverse: no one statement can summarize all of the abilities one must account for in user interface design.
 		</p>
 		
 		<p>
@@ -210,6 +211,8 @@
 
 		<p>Martez E. Mott, Radu-Daniel Vatavu, Shaun K. Kane, and Jacob O. Wobbrock. 2016. <a href="https://doi.org/10.1145/2858036.2858390">Smart Touch: Improving Touch Accuracy for People with Motor Impairments with Template Matching</a>. In Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems (CHI '16). ACM, New York, NY, USA, 1934-1946.</p>
 
+		<p>Molly Follette Story. 1998. Maximizing Usability: The Principles of Universal Design, Assistive Technology, 10:1, 4-12, DOI: 10.1080/10400435.1998.10131955<p>
+		
 		<p>Amanda Swearngin, Amy J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
 
 		<p>Jacob O. Wobbrock, Brad A. Myers, and John A. Kembel. 2003. <a href="https://doi.org/10.1145/964696.964703">EdgeWrite: a stylus-based text entry method designed for high accuracy and stability of motion</a>. In Proceedings of the 16th annual ACM symposium on User interface software and technology (UIST '03). ACM, New York, NY, USA, 61-70.</p>
