--- a/accessibility.html
+++ b/accessibility.html
@@ -55,10 +55,24 @@
 			This might describe someone you know.
 			Chances are, you will be disabled in one or more of these ways someday as you age.
 			And that means you'll struggle or be unable to use the graphical user interfaces you've worked so hard to learn.
+			And if you know no one that struggles with interfaces, it's probably because they are stigmatized by their difficulties and do not share their struggles.
+			Or worse yet, they are not even in your social world, because in ability to use interfaces has led to their systematic exclusion.
+			And if justice and inclusion are not justification enough, remember that every business that ignores accessibility is ignoring 15% of people in the world as potential customers.
 		</p>
 		
 		<p>
-			Most interfaces assume that their users have no disabilities.
+			Of course, abilities vary, and this variation has different impacts on people's ability to use interfaces.
+			One of the most common forms of disability is blindness and low-vision.
+			But even within these categories, there is diversity.
+			Some people are completely blind, some have some sight but need magnification.
+			Some people have color blindness, which can be minimally impactful, unless an interface relies heavily on colors that a person cannot distinguish.
+			I am near-sighted, but still need glasses to interact with user interface close to my face.
+			When I do not have my glasses, I have to rely on magnification to see visual aspects of user interface.		
+			And while the largest group of people with disabilities are those with vision issues, the long tail of other disabilites around speech, hearing, and motor ability, when combined, is just as large.
+		</p>	
+		
+		<p>
+			Of course, most interfaces assume that none of this variation exists.
 			And ironically, it's partly because the user interface toolkits we described in <a href="architecture.html">the last chapter</a> embed this assumption deep in their architecture.
 			Toolkits make it so easy to design graphical user interfaces that these are the only kind of interfaces designers make.
 			This results in most interfaces being difficult or sometimes impossible for vast populations to use, which really makes no business sense (<a href="https://doi.org/10.1145/2843590">Horton and Sloan 2015</a>).
