--- a/history.html
+++ b/history.html
@@ -105,7 +105,7 @@
 		<p>
 			Sketchpad, and Bush and Licklider's article, inspired Douglas Engelbart to found the <a href="https://en.wikipedia.org/wiki/Augmentation_Research_Center">Augmentation Research Center</a> at the Stanford Research Institute (SRI) in the early 1960's. 
 			Over the course of about six years, with funding from NASA and the U.S. Defense Department's Advanced Research Projects Agency (known today as DARPA), Engelbart and his team prototyped the "oN-Line System" (or the NLS), which attempted to engineer much of Bush's vision.
-			NLS had networking, windows, hypertext, graphics, command input, video conferencing, the computer mouse, word progressing, file version control, text editing, and numerous other features of modern computing.
+			NLS had networking, windows, hypertext, graphics, command input, video conferencing, the computer mouse, word processing, file version control, text editing, and numerous other features of modern computing.
 			Engelbart himself demoed the system to a live audience in what is often called "The Mother of all Demos."
 			You can see the entire demonstration in the video above.
 		</p>
