Fixed #86, motivating Bubble Cursor/Lens.

--- a/pointing.html
+++ b/pointing.html
@@ -152,7 +152,8 @@
 			For example, area cursors are the idea of having a mouse cursor represent an entire two-dimensional space rather than a single point, reducing the distance to targets.
 			These have been applied to help users with motor impairments (<a href="https://doi.org/10.1145/1866029.1866055">Findlater et al. 2010</a>).
 			The Bubble Cursor is an area cursor that dynamically resizes a cursor's activation area based on proximity to a target, growing it to the maximum possible size based on the surrounding targets (<a href="http://dx.doi.org/10.1145/1054972.1055012">Grossman and Balakrishnan 2005</a>).
-			You can see one improvement to the Bubble Cursor, the Bubble Lens, in the video below, showing how the Lens magnifies content in target-dense spaces (<a href="https://doi.org/10.1145/2556288.2557410">Mott and Wobbrock 2014</a>).
+			Cursors like this make it much easier for people with motor impairments (e.g., Parkinson’s disease), to click on targets with a mouse, even when their hands "tremor", making unexpected, unwanted movements.
+			You can see one improvement to the Bubble Cursor, the Bubble Lens, in the video below, showing how the Lens magnifies content in target-dense spaces (<a href="https://doi.org/10.1145/2556288.2557410">Mott and Wobbrock 2014</a>), making it even easier for people who lack the ability to finely coordinate their motor movements to click on targets.
 		</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
