Fixed #95, grammar issues.

--- a/text-entry.html
+++ b/text-entry.html
@@ -48,11 +48,10 @@
 			What underlies these strong opinions?
 			A large set of hidden complexities.
 			Text entry needs to support letters, numbers, and symbols across nearly all of human civilization.
-			In <a href="http://www.unicode.org/versions/Unicode6.0.0/">Unicode 6.0</a>, there are 109,384 distinct symbols that people can enter into a computer.
-			It needs to be fast enough to move at the speed of thought.
-			It needs to be error-free, and when errors do occur, it needs to help a user rapidly recover from and correct them, so they can focus on what they're saying, not on the low-level mechanics of fixing a character.
-			People also need to <em>learn</em> text entry interfaces, just like they learn handwriting, keyboarding, speech, and other forms of verbal communication.
-			But people also need to be comfortable while they're entering text: it shouldn't hurt, it shouldn't cause fatigue, and most importantly it should be <em>possible</em>.
+			How can text entry support the input of the 109,384 distinct symbols from all human languages encoded in <a href="http://www.unicode.org/versions/Unicode6.0.0/">Unicode 6.0</a>?
+			How can text be entered quickly and error-free, and help users recover from entry errors?
+			How can people <em>learn</em> text entry interfaces, just like they learn handwriting, keyboarding, speech, and other forms of verbal communication.
+			How can people enter text in a way that doesn't cause pain, fatigue, or frustration?
 			Many people with injuries or disabilities (e.g., someone who is fully paralyzed) may find it excruciatingly difficult to enter text.
 			The ever-smaller devices in our pockets and on our wrists only make this harder, reducing the usable surfaces for comfortable text entry.
 		</p>
@@ -114,7 +113,7 @@
 		</p>
 
 		<p>
-			Cell phones in the early 21st century used a <strong>multitap</strong> method in which each key on a numeric keyboard mapped to three or four letters. 
+			Cell phones in the early 21st century used a <strong>multitap</strong> method in which each key on the 12-key numeric keyboard typically found on pre-smartphone cellphones mapped to three or four numbers or letters. 
 			To select the letter you wanted, you would press a key multiple times until the desired letter is displayed.
 			A letter was entered when a new key was struck.
 			If the next letter is on the same key as the previous letter, then the user must wait for a short timeout or hold down the key to commit the desired character.
@@ -245,7 +244,7 @@
 			These techniques are widely used in speech and handwriting recognition to increase accuracy, and are now ubiquitous in smartphone keyboards.
 		</p>
 
-		<h2>The future of text entry</h2>
+		<h2>The past, present, and future of text entry</h2>
 			
 		<p>
 			Our brief tour through the history of text entry reveals a few important trends:
