Fixed #80, adding sub-headers.

--- a/pointing.html
+++ b/pointing.html
@@ -35,6 +35,8 @@
 			</em>
 		</p>
 
+		<h2>What is pointing?</h2>
+		
 		<p>
 			Fingers can be pretty handy.
 			(Sorry for the pun, I couldn't resist!).
@@ -80,6 +82,8 @@
 			The implications of this are quite simple: the closer and bigger the target, the faster it will be to point to.
 		</p>
 		
+		<h2>What does pointing have to do with user interfaces?</h2>
+		
 		<p>
 			But there are some other interesting implications for user interface design in the algebraic extremes.
 			For example, what if the target size is <em>infinite</em>?
@@ -122,6 +126,8 @@
 			In contrast, absolute pointing cannot have variable gain, since the speed of interface motion is tied to the speed of a user’s physical motion.
 		</p>
 				
+		<h2>How can we make pointing better?</h2>
+		
 		<p>
 			When you think about these two dimensions from a Fitts' law perspective, making input more efficient is partly about inventing input devices that minimize the <strong>a</strong> and <strong>b</strong> coefficients.
 			For example, researchers have invented new kinds of mice that have multi-touch on them, allowing users to more easily provide input during pointing movements (<a href="https://doi.org/10.1145/1622176.1622184">Villar et al. 2009</a>).
