--- a/hands.html
+++ b/hands.html
@@ -106,7 +106,7 @@
 		</p>
 
 		<p>
-			Commericial touch screens still focus on single-user interface, only allowing one person at a time to touch a screen.
+			Commercial touch screens still focus on single-user interface, only allowing one person at a time to touch a screen.
 			Research, however, has explored many ways to differentiate between multiple people using a single touch-screen.
 			One approach is to have users sit on a surface that determines their identity, differentiating touch input (<a href="http://dx.doi.org/10.1145/502348.502389">Dietz and Leigh 2001</a>).
 			Another approach uses wearables to differentiate users (<a href="https://doi.org/10.1145/2984511.2984564">Webb et al. 2016</a>).
