Fixed #84, adding Palm video.

--- a/hands.html
+++ b/hands.html
@@ -129,13 +129,18 @@
 			In addition to fingers, many researchers have explored the unique benefits of pen-based interactions to support handwriting, sketching, diagramming, or other touch-based interactions.
 			These leverage the skill of grasping a pen or pencil that many are familiar with from manual writing.
 		</p>
-
+		
 		<p>
 			Some of these pen-based interactions are simply replacements for fingers.
 			For example, the Palm Pilot, popular in the 1990's, required the use of a stylus for it's resistive touch-screen, but the pens themselves were plastic.
 			They merely served to prevent fatigue from applying pressure to the screen with a finger and to increase the precision of touch during handwriting or interface interactions.
 		</p>
-		
+
+		<p class="embed-responsive embed-responsive-16by9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/OEQFq44wlKA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<center><em>A demonstration of an early Palm Pilot device, which relied on pen-based input.</em></center>
+		</p>
+
 		<p>
 			However, pens impose their own unique gulfs of execution and evaluation.
 			For example, many pens are not active until a device is set to a mode to receive pen input.
