Fixed #83, adding gesture video.

--- a/hands.html
+++ b/hands.html
@@ -185,6 +185,11 @@
 			Some researchers have leveraged wearables to simplify recognition and increase recognition accuracy. These have included sensors mounted on fingers (<a href="https://doi.org/10.1145/2984511.2984558">Gupta et al. 2016</a>), movement of a smartwatch through wrist rotations (<a href="https://doi.org/10.1145/2984511.2984574">Zhang et al. 2016</a>), while walking (<a href="ttps://doi.org/10.1145/2984511.2984563">Gong et al. 2016</a>), or while being tapped or scratched (<a href="https://doi.org/10.1145/2984511.2984582">Laput et al. 2016</a>).
 		</p>
 		
+		<p class="embed-responsive embed-responsive-16by9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Poi0MeASmuY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<center><em>A demonstration of the ViBand research prototype, which uses bio-acoustic sensing via commericial smartwatch accelerometers (<a href="https://doi.org/10.1145/2984511.2984582">Laput et al. 2016</a>)</em></center>
+		</p>
+		
 		<p>
 			While all of these inventions are exciting in their potential, gestures have significant gulfs of execution and evaluation.
 			How does someone learn the gestures?
